<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home"
            android:title="@string/home_string" />

        <item
            android:id="@+id/services"
            android:checked="false"
            android:icon="@drawable/services"
            android:title="@string/services_string" />

        <item
            android:id="@+id/packeges"
            android:checked="false"
            android:icon="@drawable/services"
            android:title="@string/packages" />

        <item
            android:id="@+id/payment"
            android:checked="false"
            android:icon="@drawable/payments"
            android:title="@string/payment_string" />

        <item
            android:id="@+id/notification"
            android:checked="false"
            android:icon="@drawable/notifications"
            android:title="@string/notification_string" />


        <item
            android:id="@+id/offer"
            android:checked="false"
            android:icon="@drawable/offers"
            android:title="@string/offer_cash_back_string" />
        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/about"
            android:title="@string/about_string" />
        <item
            android:id="@+id/contact"
            android:checked="false"
            android:icon="@drawable/contact"
            android:title="@string/contact_string" />
        <item
            android:id="@+id/review"
            android:checked="false"
            android:icon="@drawable/contact"
            android:title="@string/reviews" />
        <item
            android:id="@+id/refered"
            android:checked="false"
            android:icon="@drawable/contact"
            android:title="@string/refered" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/logout"
            android:title="@string/logout_string" />

    </group>
</menu>