<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_addtocard"
        android:title="@string/action_addmoney"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/common_full_open_on_phone"
        />
    <item android:id="@+id/action_yourcard"
        android:title="@string/action_your_point"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/common_full_open_on_phone"
        />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
