<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="visible">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/app_logo"
            android:id="@+id/scimage"
            android:visibility="visible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2.3"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jhothwara,jaipur Rajasthan INDIA"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight=".7"
            android:minLines="3"
            android:paddingBottom="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2.3"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="841841866"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight=".7"
            android:singleLine="true"
            android:paddingBottom="5dp"
            android:id="@+id/mobile" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2.3"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sharpcrop@gamil.com"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight=".7"
            android:singleLine="true"
            android:paddingBottom="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Open"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="2.3"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="9AM To 10PM"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight=".7"
            android:singleLine="true"
            android:paddingBottom="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pracent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>
