<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appointment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TotalAmount"
            android:textColor="@color/black"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableBottom="@color/black"></TextView>

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="330"
            android:textColor="@color/submitbutton"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="right"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#000" />


        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
       >
        <TextView
            android:id="@+id/promo_code_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Have a Promocode ?"
            android:textColor="@color/blue"
            android:gravity="center"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            />
       </LinearLayout>
    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/paymentOption"
        android:textColor="@color/black"
        android:textAppearance="?android:textAppearanceSmall"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/paymentOption"
            android:textColor="@color/black"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RadioGroup
            android:id="@+id/payment_option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Cash Payment"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioButton
                android:id="@+id/paytm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Paytm"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioButton
                android:id="@+id/payumoney"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="PayUMoney"
                android:textAppearance="?android:textAppearanceMedium"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_now"
                android:textColor="@color/white"
                android:background="@color/submitbutton"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
