<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="20dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/app_logo"
                    android:scaleType="fitCenter"
                    android:id="@+id/logo"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/outline"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#757575"
                    android:drawableLeft="@drawable/ic_mail"
                    android:padding="15dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/outline"

                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#757575"
                    android:padding="15dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                 android:layout_marginTop="20dp"
                android:weightSum="1">
                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/submitbutton"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textAppearance="?android:textAppearanceMedium">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Or"
                    android:textColor="#5525c7"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebookLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="googleLogin" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="20dp"                >
                <TextView
                    android:id="@+id/forgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/forgetpassword"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="If don't have an Account? Sign Up"
                    android:textColor="#5525c7"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
